@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2014/04/26 15:55:12 manu Exp $
+
+SHA1 (check_fstab-0.1.tgz) = f78f8015a6aa484c30081077f1d58497c1daf60c
+RMD160 (check_fstab-0.1.tgz) = 5df7ecc26174acc7741739bacb7592ca2af46d48
+Size (check_fstab-0.1.tgz) = 2042 bytes
